<resources>
    <string name="app_name">큐챗</string>


    <!-- ============= 액티비티 ================= -->

    <!-- activity_init.xml -->
    <string name="activity_init_image">로딩 이미지</string>


    <!-- activity_login.xml -->
    <string name="activity_login_mainLogo_desc">메인로고</string>
    <string name="activity_login_id">아이디</string>
    <string name="activity_login_pw">비밀번호</string>
    <string name="activity_login_autoLogin">자동 로그인</string>
    <string name="activity_login_btn_signUp_txt">회원가입</string>
    <string name="activity_login_btn_login_txt">로그인</string>


    <!-- activity_chatting_room.xml -->

    <!-- main -->
    <string name="activity_chatting_room_img_q_board">전광판</string>
    <string name="activity_chatting_room_btn_q_report">문제오류신고</string>
    <string name="activity_chatting_room_btn_help">게임 도움말</string>
    <string name="activity_chatting_room_img_chatting_show_hide">채팅 내역 보이기/감추기</string>
    <string name="activity_chatting_room_btn_send">전송</string>
    <string name="activity_chatting_room_lbl_question">== 문제를 준비중입니다 ==</string>
    <string name="activity_chatting_room_img_dup_answer">복수정답확인</string>
    <string name="activity_chatting_room_btn_menu">메뉴</string>
    <string name="activity_chatting_room_btn_go_battle">배틀</string>
    <string name="activity_chatting_room_lbl_question_answer_1">정답은 『%1$s』입니다.</string>
    <string name="activity_chatting_room_lbl_question_answer_2">정답은 『%1$s』이며, %2$s도 정답입니다</string>

    <!-- menu(navigation view) -->
    <string name="activity_chatting_room_lbl_menu_title_desc">TITLE</string>
    <string name="activity_chatting_room_lbl_menu_q_type_desc">TYPE</string>
    <string name="activity_chatting_room_lbl_menu_p_type_desc">PUBLIC</string>
    <string name="activity_chatting_room_lbl_menu_me">나</string>
    <string name="activity_chatting_room_btn_menu_change_character">캐릭터 변경</string>

    <string name="activity_chatting_room_btn_menu_edit">방 속성 변경</string>
    <string name='activity_chatting_room_img_menu_profile_img'>프로필 사진</string>
    <string name="activity_chatting_room_lbl_menu_points_desc">POINTS</string>
    <string name="activity_chatting_room_lbl_menu_exp_desc">EXP</string>
    <string name="activity_chatting_room_lbl_menu_current_people">방 멤버 목록(</string>
    <string name="activity_chatting_room_lbl_menu_num_people_slash">/</string>
    <string name="activity_chatting_room_lbl_menu_num_people_rp">)</string>
    <string name="activity_chatting_room_btn_menu_invite_person">초대</string>
    <string name="activity_chatting_room_btn_menu_exit">채팅방 나가기</string>







    <!-- ============= 메뉴 ================== -->

    <!-- menu/navigation.xml -->
    <string name="navigation_main">홈</string>
    <string name="navigation_game">게임하기</string>
    <string name="navigation_feed">소식</string>
    <string name="navigation_main_desc">main</string>
    <string name="navigation_game_desc">game</string>
    <string name="navigation_feed_desc">feed</string>




    <!-- =========== 프래그먼트 =========== -->

    <!-- fragment_main.xml -->
    <!-- drawer menu selector -->

    <!-- HOME -->
    <string name="HOME_title">홈</string>
    <string name="HOME_menu_icon">메뉴 아이콘</string>
    <string name="HOME_point_icon">포인트</string>
    <string name="HOME_exp_icon">경험치</string>
    <string name="HOME_list_friend">내 친구</string>
    <string name="HOME_list_character">내 캐릭터</string>
    <string name="HOME_friends_list_no_friend">등록한 친구가 없습니다</string>



    <!-- fragment_game.xml -->
    <string name="game_title">게임하기</string>
    <string name="game_lbl_now_loading">채팅방 목록을 불러오고 있습니다..</string>
    <string name="game_lbl_no_room">개설된 방이 없습니다</string>
    <string name="game_btn_add_room_desc">방 개설</string>
    <string name="game_btn_refresh_desc">새로고침</string>
    <string name="game_txt_search_content">검색..</string>
    <string name="game_btn_go_search_desc">검색</string>
    <string name="game_lbl_no_result">검색 결과가 없습니다</string>
    <string name="game_btn_see_all">전체 목록 보기</string>
    <string name="game_btn_help">게임 도움말</string>

    <string name="game_room_element_people_info">%1$s / %2$s</string>



    <!-- ============엘리먼트 =============== -->

    <!-- element_ver_pic_name_grid.xml -->
    <string name="element_ver_pic_name_grid_characters_face_desc">얼굴</string>
    <string name="element_ver_pic_name_grid_characters_image_desc">이미지</string>
    <string name="element_ver_pic_name_grid_characters_now_using">사용중</string>

    <!-- element_chatting_room_list.xml -->
    <string name="element_chatting_room_list_people">사람 이미지</string>
    <string name="element_chatting_room_list_p_type">공개타입</string>

    <!-- element_chatting_conversation.xml -->
    <string name="element_chatting_conversation_colon">:</string>

    <!-- element_chatting_ranking.xml -->
    <string name="element_chatting_ranking_image">상위랭킹이미지</string>
    <string name="element_chatting_ranking_points">%1$s포인트</string>
    <string name="element_chatting_ranking_record">%1$s초</string>

    <!-- element_chatting_room_member_list.xml -->
    <string name="element_chatting_room_member_list_profile_img">프로필 사진</string>
    <string name="element_chatting_room_member_list_room_master">방장</string>


    <!-- =============== 팝업 =============== -->

    <!-- popup_room_create.xml -->
    <string name="popup_room_create_lbl_title">방 개설하기</string>
    <string name="popup_room_create_lbl_room_title">방 제목</string>
    <string name="popup_room_create_lbl_max_people">최대 인원수</string>
    <string name="popup_room_create_lbl_q_type">퀴즈 타입</string>
    <string name="popup_room_create_lbl_p_type">방 공개 여부</string>
    <string name="popup_room_create_rd_p_type_public">공개</string>
    <string name="popup_room_create_rd_p_type_private">비공개</string>
    <string name="popup_room_create_lbl_room_password">방 비밀번호</string>
    <string name="popup_room_create_btn_create">개설하기</string>
    <string name="popup_room_create_btn_cancel">취소</string>

    <!-- popup_dup_answer.xml -->
    <string name="popup_dup_answer_ok">확 인</string>

    <!-- popup_member_info.xml -->
    <string name="popup_member_info_img_profile_img">프로필 사진</string>
    <string name="popup_member_info_btn_close">닫기</string>
    <string name="popup_member_info_btn_send_jjokji">쪽지 보내기</string>
    <string name="popup_member_info_btn_handle_friend">친구 관리</string>
    <string name="popup_member_info_quote_start">쌍따옴표 시작</string>
    <string name="popup_member_info_quote_end">쌍따옴표 끝</string>
    <string name="opa_window_desc">투명창</string>

    <string name="popup_member_info_user_id">\@%1$s</string>

    <!-- popup_modify_room_info.xml -->
    <string name="popup_modify_room_info_rd_p_type_public">공개</string>
    <string name="popup_modify_room_info_rd_p_type_private">비공개</string>
    <string name="popup_modify_room_info_btn_cancel">취소</string>
    <string name="popup_modify_room_info_btn_ok">확인</string>
</resources>
