<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:layout_width="330dp"
                                             android:layout_height="wrap_content"
                                             android:background="#ffffff">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/lbl_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/popup_room_create_lbl_title"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/lbl_room_title"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_room_create_lbl_room_title"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/txt_room_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPersonName" />


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/lbl_max_people"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_room_create_lbl_max_people"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <Spinner
                        android:id="@+id/spn_max_people"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/lbl_q_type"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_room_create_lbl_q_type"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <Spinner
                        android:id="@+id/spn_q_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/lbl_p_type"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/popup_room_create_lbl_p_type"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/rd_p_type_public"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/popup_room_create_rd_p_type_public" />

                    <RadioButton
                            android:id="@+id/rd_p_type_private"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/popup_room_create_rd_p_type_private" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                    android:id="@+id/create_room_set_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                <TextView
                        android:id="@+id/lbl_room_password"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_room_create_lbl_room_password"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/txt_room_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <Button
                        android:id="@+id/btn_create"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/popup_room_create_btn_create"
                        android:textSize="18sp" />

                <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/popup_room_create_btn_cancel"
                        android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <ImageView
            android:id="@+id/opa_window"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#55000000"
            android:visibility="gone"
            android:contentDescription="@string/opa_window_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="165dp" />

    <ProgressBar
            android:id="@+id/pg_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>