<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="#ffffff">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/user_signup_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="#ff901e"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ff901e"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="#ff901e"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/game_title"
                            android:textColor="#ffffff"
                            android:textSize="22sp"/>

                </LinearLayout>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:background="#ff901e"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                    <Spinner
                            android:id="@+id/spn_category"
                            android:layout_width="135dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_gravity="center_vertical">

                    </Spinner>


                    <Spinner
                            android:id="@+id/playgame_search_select"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="4dp"
                            android:visibility="gone"/>

                    <EditText
                            android:id="@+id/txt_search_content"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:hint="@string/game_txt_search_content"/>

                    <ImageView
                            android:id="@+id/btn_go_search"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="8dp"
                            android:layout_gravity="center_vertical"
                            android:contentDescription="@string/game_btn_go_search_desc"
                            android:src="@drawable/ico_go_search"/>
                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/room_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:scrollbars="vertical"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" android:visibility="visible"/>


                <android.support.v7.widget.RecyclerView
                        android:id="@+id/room_list_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_weight="1"
                        android:scrollbars="vertical"
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                        android:id="@+id/lbl_no_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#000000"
                        android:textAlignment="center"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:visibility="gone"
                        android:text="@string/game_lbl_no_result"/>

                <Button
                        android:id="@+id/btn_see_all"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:background="#f1df39"
                        android:text="@string/game_btn_see_all"
                        android:textSize="18sp"
                        android:visibility="gone"/>

            </LinearLayout>

            <Button
                    android:id="@+id/performclick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <ImageView
            android:id="@+id/opawindow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#66000000"
            android:visibility="gone"
            android:contentDescription="@string/opa_window_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
            android:id="@+id/pg_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="#713d07"
            android:padding="8dp"
            android:text="@string/game_btn_help"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/btn_refresh"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/lbl_now_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_lbl_now_loading"
            android:textSize="19sp"
            android:textColor="#000000"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/pg_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/lbl_no_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"
            android:textSize="19sp"
            android:textColor="#000000"
            android:text="@string/game_lbl_no_room"/>

    <ImageView
            android:id="@+id/btn_refresh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/game_btn_refresh_desc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ico_refresh" />

    <ImageView
            android:id="@+id/btn_create_room"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/game_btn_add_room_desc"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ico_add_room"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

</android.support.constraint.ConstraintLayout>
