<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context="com.dongmin.qchat.activities.Login">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

            <ImageView
                    android:id="@+id/mainLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="60dp"
                    android:contentDescription="@string/activity_login_mainLogo_desc"
                    android:src="@drawable/banner_main_logo" />

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <EditText
                            android:id="@+id/txt_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="10dp"
                            android:hint="@string/activity_login_id"
                            android:ems="10"
                            android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <EditText
                            android:id="@+id/txt_pw"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:hint="@string/activity_login_pw"
                            android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    <CheckBox
                            android:id="@+id/chk_auto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/activity_login_autoLogin" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="346dp">

                <Button
                        android:id="@+id/btn_signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ff901e"
                        android:layout_margin="8dp"
                        android:textSize="17sp"
                        android:text="@string/activity_login_btn_signUp_txt" />

                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_login_btn_login_txt"
                        android:layout_margin="8dp"
                        android:background="#ff901e"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

<!--

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_googleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="visible" />

-->
        </LinearLayout>


    </ScrollView>


    <ImageView
            android:id="@+id/opaWindow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#66000000"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
            android:id="@+id/pgBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
